--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -69,7 +69,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -928,7 +927,6 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -1014,7 +1012,6 @@ allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
-allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c07::f03c:95ff:fe1e:22e;
@@ -1060,7 +1057,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1576,6 +1572,7 @@ allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:a0e::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1682,7 +1679,6 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1706,6 +1702,7 @@ allow 38.135.24.31;
 allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1771,7 +1768,6 @@ allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
 allow 45.67.34.82;
-allow 45.79.144.222;
 allow 45.80.158.167;
 allow 45.80.158.175;
 allow 45.80.158.205;
@@ -1937,7 +1933,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1974,6 +1969,7 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
