--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -201,6 +201,7 @@ allow 172.234.245.150;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 172.81.135.88;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
@@ -512,7 +513,6 @@ allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
-allow 185.247.226.175;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
@@ -522,6 +522,7 @@ allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
 allow 185.40.4.127;
+allow 185.40.4.128;
 allow 185.40.4.132;
 allow 185.40.4.149;
 allow 185.40.4.150;
@@ -676,6 +677,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -925,6 +927,7 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -1032,6 +1035,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1307,7 +1311,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1607,7 +1610,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
@@ -1675,6 +1677,7 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1698,7 +1701,6 @@ allow 38.135.24.31;
 allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1841,6 +1843,7 @@ allow 5.253.247.27;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
+allow 5.255.105.180;
 allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
@@ -1924,11 +1927,11 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 88.218.0.50;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1956,7 +1959,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
-allow 91.219.237.39;
 allow 91.227.114.153;
 allow 91.92.109.126;
 allow 91.92.109.43;
