--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,6 +124,7 @@ allow 135.125.239.70;
 allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 138.68.144.236;
 allow 139.162.90.140;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -291,6 +292,7 @@ allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.236.55;
 allow 185.195.71.244;
+allow 185.198.234.207;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.220.100.240;
@@ -1289,6 +1291,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1571,7 +1574,6 @@ allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:a0e::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1840,6 +1842,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1967,7 +1970,6 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
